Correciones menores pt1000

--- a/Recuperar.html
+++ b/Recuperar.html
@@ -46,6 +46,7 @@
                     </div>
                     <div class="Entrada-Datos-2">
                         <input type="number" placeholder="Ingresa Codigo" class="Insertar-Segundo" id="Codigo"></input>
+                        <button class="Boton-Regresar" type="button" onclick="fun_regresar()">Regresar</button>
                     </div>
                     <div class="Entrada-Datos-3">
                         <input type="password" placeholder="Ingresa nueva contraseña" class="Insertar-Tercero" id="Contraseña-Nueva_1" name="Contra">
