espero correcciones finales p1

--- a/faq.html
+++ b/faq.html
@@ -139,15 +139,13 @@
           <div class="faq-three">
 
             <!-- faq question -->
-            <h1 class="faq-page">¿Dónde puedo visualizar los manuales de usuario y manual de analista?</h1>
+            <h1 class="faq-page">¿Dónde puedo visualizar los manuales de usuario?</h1>
 
             <!-- faq answer -->
             <div class="faq-body">
-                <p>Puedes descargar ambos manuales en los siguientes links.</p>
-                <p>Manual de usuario.</p>
-                <p>Manual de instructivos.</p>
-
-            </div>
+                <p>Puedes visualizar el manual de usuario en el siguiente enlace .</p>
+                <a href="https://publuu.com/flip-book/192924/478648" style="color:darkturquoise;">Manual de usuario</a>
+              </div>
             <br><br>
         </div>
       </section>
