--- a/faq.html
+++ b/faq.html
@@ -132,7 +132,7 @@
 
               <!-- faq answer -->
               <div class="faq-body">
-                  <p>Puedes contactar a nuestro equipo de soporte al cliente enviando un correo electrónico a support@ejemplo.com o completando el formulario de contacto en nuestra página web. Estaremos encantados de ayudarte con cualquier pregunta o consulta que tengas.</p>
+                  <p>Puedes contactar a nuestro equipo de soporte al cliente enviando un correo electrónico a cursoscorblaserca@gmail.com. Estaremos encantados de ayudarte con cualquier pregunta o consulta que tengas.</p>
               </div>
           </div>
 
@@ -144,7 +144,7 @@
             <!-- faq answer -->
             <div class="faq-body">
                 <p>Puedes visualizar el manual de usuario en el siguiente enlace .</p>
-                <a href="https://publuu.com/flip-book/192924/478648" style="color:darkturquoise;">Manual de usuario</a>
+                <a href="https://publuu.com/flip-book/192924/478648" target="_blank" style="color:darkturquoise;">Manual de usuario</a>
               </div>
             <br><br>
         </div>
@@ -154,7 +154,7 @@
         <div class="container-foo">
           <div class="row">
             <div class="footer-col">
-              <h4>Company</h4>
+              <h4>Compañía</h4>
               <ul class="ul-foo">
                 <li><a href="acercaDe.html" class="a-foo">Sobre nosotros</a></li>
                 <li><a href="cursoslanding.html" class="a-foo">Cursos</a></li>
@@ -175,12 +175,11 @@
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Siguenos</h4>
+              <h4>Síguenos</h4>
               <div class="social-links">
-                <a href="#" class="a-foo"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100095263480479&mibextid=ZbWKwL" class="a-foo"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/corblacerca_edu/?igshid=MzNlNGNkZWQ4Mg%3D%3D" class="a-foo"><i class="fab fa-instagram"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=584149664100" class="a-foo"><i class="fab fa-whatsapp"></i></a>
               </div>
             </div>
           </div>
