--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="assets/img/card2ingles2.jpg" />
           </figure>
           <div class="contenido">
-            <h3>Aprende Ingles</h3>
+            <h3>Aprende Inglés</h3>
             <p>¡Mejora tus habilidades de inglés de forma divertida y fácil! Esta es tu oportunidad para mejorar tu inglés. ¡Únete a nosotros para aprovechar al máximo esta oportunidad única! Nuestro curso incluye ejercicios de práctica y recursos especializados. ¡Únete ahora y comienza tu viaje hacia una mejor comprensión del inglés!</p>
             <a href="cursoslanding.html">Leer mas</a>
           </div>
@@ -90,7 +90,7 @@
             <img src="assets/img/card3portugues.jpg" />
           </figure>
           <div class="contenido">
-            <h3>Aprende Portugues</h3>
+            <h3>Aprende Portugués</h3>
             <p>¡Mejora tu portugués y descubre cultura! Esta es tu oportunidad de mejorar tu portugués y disfrutar de una experiencia única. Ofrecemos un curso interactivo, divertido y fácil de seguir, adaptado a todos los niveles. Nuestros profesionales te ayudarán a mejorar tu comprensión y habilidades de portugués. ¡Únete ahora para aprovechar esta oportunidad única!</p>
             <a href="cursoslanding.html">Leer mas</a>
           </div>
@@ -105,7 +105,7 @@
         <div class="container-foo">
           <div class="row">
             <div class="footer-col">
-              <h4>Company</h4>
+              <h4>Compañía</h4>
               <ul class="ul-foo">
                 <li><a href="acercaDe.html" class="a-foo">Sobre nosotros</a></li>
                 <li><a href="cursoslanding.html" class="a-foo">Cursos</a></li>
@@ -126,12 +126,11 @@
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Siguenos</h4>
+              <h4>Síguenos</h4>
               <div class="social-links">
-                <a href="#" class="a-foo"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100095263480479&mibextid=ZbWKwL" class="a-foo"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/corblacerca_edu/?igshid=MzNlNGNkZWQ4Mg%3D%3D" class="a-foo"><i class="fab fa-instagram"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=584149664100" class="a-foo"><i class="fab fa-whatsapp"></i></a>
               </div>
             </div>
           </div>
