--- a/cursoslanding.html
+++ b/cursoslanding.html
@@ -82,7 +82,7 @@
         <div class="container-foo">
           <div class="row">
             <div class="footer-col">
-              <h4>Company</h4>
+              <h4>Compañía</h4>
               <ul class="ul-foo">
                 <li><a href="acercaDe.html" class="a-foo">Sobre nosotros</a></li>
                 <li><a href="cursoslanding.html" class="a-foo">Cursos</a></li>
@@ -103,12 +103,11 @@
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Siguenos</h4>
+              <h4>Síguenos</h4>
               <div class="social-links">
-                <a href="#" class="a-foo"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100095263480479&mibextid=ZbWKwL" class="a-foo"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/corblacerca_edu/?igshid=MzNlNGNkZWQ4Mg%3D%3D" class="a-foo"><i class="fab fa-instagram"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=584149664100" class="a-foo"><i class="fab fa-whatsapp"></i></a>
               </div>
             </div>
           </div>
